# app2

./: CMakeLists.txt  autobuild.bat  main.cpp  main.h  qml.qrc
GUI/: BackPanel.qml  DataPanel.qml  DataWindow.qml  ElementPanel.qml  FrontPanel.qml  LabelEdit.qml  PageWindow.qml  TreeView0.qml  main.qml
NWLan/: .module  config_.json
design/: components.json
pack/: CMakeLists.txt  main.cpp
